--- a/pytest.ini
+++ b/pytest.ini
@@ -4,4 +4,7 @@ python_classes = *Tests
 python_functions = test_*
 
 markers = 
-    teste_generico
+    teste_1_1
+    teste_2_1
+    teste_2_2
+    teste_2_3
